--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,10 @@
 :root {
-  --light-color: #fff;
-  --dark-color: #1f2028;
-
-  --bg-color: #f4f4f4;
+  --text-color: #fff;
+  --text-color-2: #a9adc1;
+  --bg-color: #1f2028;
+  --card-bg-color: #2e3039;
+  --input-outline-color: #444650;
+  /* --input-outline-color: #696c79; */
 }
 
 *,
@@ -19,9 +21,9 @@ html {
 
 body {
   font-size: 1.6rem;
-  color: var(--light-color);
   font-weight: 400;
-  background: var(--dark-color);
+  color: var(--text-color);
+  background: var(--bg-color);
   box-sizing: border-box;
   font-family: 'Nunito Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
     'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
@@ -38,4 +40,5 @@ img {
 button,
 input {
   font-size: inherit;
+  font-family: inherit;
 }
